--- a/app/views/static_pages/learn.html.erb
+++ b/app/views/static_pages/learn.html.erb
@@ -171,7 +171,7 @@
              </div><!--//step-->
         </div><!--//row-->
         
-        <div class="text-center"><a class="btn btn-cta btn-cta-primary" href="/preregistration">Sign Up to Enroll in Future TECHRISE Cohorts</a></div>
+        <div class="text-center"><%= link_to 'SIGN UP FOR PRE-WORK', new_user_registration_path, class: 'btn btn-cta btn-cta-primary' %></div>
         
     </div><!--//container-->        
 </section><!--//steps-->
