--- a/app/views/static_pages/dashboard.html.erb
+++ b/app/views/static_pages/dashboard.html.erb
@@ -24,8 +24,8 @@
   <div class="col-xs-12 col-md-6">
     <% if @last_lesson %>
 
-      <% lesson_name = Tags::LESSONS[@last_lesson.parameters[:course_name].underscore + "s"].keys[@last_lesson.parameters[:lesson_id].to_i - 1][1] %>
-      
+
+      <% lesson_name = get_lesson_name(@last_lesson.parameters[:course_name], @last_lesson.parameters[:lesson_id]) %>      
       <div class="panel">
         <div class="panel-body text-center">
           <div class="row">
