--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
 
       <div class="field">
         <%= f.label :last_name %><br />
-        <%= f.text_field :last_name, autofocus: true, required: true, class: 'form-control', placeholder: 'First Name' %>
+        <%= f.text_field :last_name, autofocus: true, required: true, class: 'form-control', placeholder: 'Last Name' %>
       </div>
 
       <div class="field">
